--- a/Projects/Dotnet8Bench/Dotnet8Bench/Dotnet8Bench.csproj
+++ b/Projects/Dotnet8Bench/Dotnet8Bench/Dotnet8Bench.csproj
@@ -5,6 +5,10 @@
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
-    <InterceptorsPreviewNamespaces>$(InterceptorsPreviewNamespaces);InterceptorProject</InterceptorsPreviewNamespaces>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="BenchmarkDotNet" Version="0.13.12" />
+  </ItemGroup>
+
 </Project>
